kubernetes/examples/ingress/templates/ingress-with-basic-auth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: NAME
  namespace: NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: SERVER_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: NAME
          servicePort: PORT
